[gd_scene load_steps=7 format=3 uid="uid://3j15a5i12y2c"]

[ext_resource type="Script" uid="uid://dvddy7iifqfhb" path="res://code/dock.gd" id="1_pi7v4"]
[ext_resource type="PackedScene" uid="uid://yta2n5njkuhi" path="res://scenes/furniture/charger_v1.tscn" id="2_uvgon"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tbgi4"]
height = 0.05991374
radius = 0.26708984

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bo6mv"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true

[sub_resource type="TorusMesh" id="TorusMesh_pi7v4"]
material = SubResource("StandardMaterial3D_bo6mv")
inner_radius = 0.25
outer_radius = 0.28
rings = 32
ring_segments = 8

[sub_resource type="Gradient" id="Gradient_uvgon"]
offsets = PackedFloat32Array(0, 0.32258064, 0.7311828, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="Dock" type="Node3D"]
script = ExtResource("1_pi7v4")

[node name="Node3D" parent="." instance=ExtResource("2_uvgon")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.019424766, 0)

[node name="Detector" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CylinderCollider" type="CollisionShape3D" parent="Detector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.03258055, 0)
shape = SubResource("CylinderShape3D_tbgi4")

[node name="RingParticles" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.018943697, 0)
amount = 3
lifetime = 2.0
draw_order = 1
mesh = SubResource("TorusMesh_pi7v4")
direction = Vector3(0, 1, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
color = Color(0.13313854, 0.36490756, 0.9999886, 1)
color_ramp = SubResource("Gradient_uvgon")

[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_detector_body_exited"]
